# hdf5-pure

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  libtest_libver_nostd.rlib  mkdocs.yml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml  fuzz.yml
benches/: hot_paths.rs
crates/hdf5-api/: Cargo.toml
crates/hdf5-api/src/: lib.rs
crates/hdf5-core/: Cargo.toml
crates/hdf5-engine/: Cargo.toml
crates/hdf5-engine/src/: extensible_array.rs  lib.rs  type_builders.rs
crates/hdf5-filters/: Cargo.toml
crates/hdf5-filters/src/: lib.rs
crates/hdf5-format/: Cargo.toml
crates/hdf5-format/src/: attribute_info.rs  btree_v1.rs  lib.rs
crates/hdf5-mat/: Cargo.toml
crates/hdf5-mat/src/: lib.rs
crates/hdf5-pure-api/: Cargo.toml
crates/hdf5-pure-api/src/: lib.rs  ndarray_support.rs  types.rs
crates/hdf5-pure-core/: Cargo.toml
crates/hdf5-pure-core/src/: checksum.rs  lib.rs
crates/hdf5-pure-engine/: Cargo.toml
crates/hdf5-pure-engine/src/: attribute.rs  chunk_cache.rs  chunked_write.rs  extensible_array.rs  group_v1.rs  group_v2.rs  lib.rs  ndarray_support.rs  type_builders.rs
crates/hdf5-pure-filters/: Cargo.toml
crates/hdf5-pure-filters/src/: lib.rs  zfp.rs
crates/hdf5-pure-format/: Cargo.toml
crates/hdf5-pure-format/src/: lib.rs  superblock.rs
crates/hdf5-pure-mat/: Cargo.toml
crates/hdf5-pure-mat/src/: lib.rs
crates/hdf5-pure-mat/src/mat/de/: value_de.rs
crates/hdf5-pure-mat/src/mat/ser/: emit_with_builder.rs
docs/: index.md  workspace-split.md
docs/about/: architecture.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: compound-types.md  compression.md  editing.md  file-space.md  generic-io.md  groups-attributes.md  ndarray.md  reading.md  repack.md  streaming.md  swmr.md  vlen-strings.md  writing.md
docs/interop/: matlab.md  portability.md
docs/reference/: changelog.md  data-types.md  features.md  limitations.md  property-support.md
docs/stylesheets/: extra.css
examples/: append_dataset.rs  append_streaming.rs  append_writer.rs  compound_types.rs  compression.rs  edit_in_place.rs  file_space.rs  generic_io.rs  groups_and_attributes.rs  matlab_fixtures.rs  ndarray_io.rs  partial_read.rs  quickstart.rs  repack.rs  swmr.rs
examples/octave/: ok.m  verify.m
fuzz/: Cargo.toml
fuzz/corpus/: README.md
fuzz/corpus/parse_file/: attrs.h5  chunked_nofilter.h5  simple_dataset.h5
fuzz/fuzz_targets/: parse_file.rs  roundtrip_simple.rs  streaming_differential.rs
scripts/: release.sh
src/: append_writer.rs  attribute.rs  attribute_info.rs  bounded.rs  btree_v1.rs  btree_v2.rs  checksum.rs  chunk_cache.rs  chunk_index_inplace.rs  chunked_read.rs  chunked_write.rs  compound.rs  convert.rs  data_layout.rs  data_read.rs  dataspace.rs  datatype.rs  edit.rs  element.rs  error.rs  extensible_array.rs  file_lock.rs  file_space_info.rs  file_writer.rs  fill_value.rs  filter_pipeline.rs  filters.rs  fixed_array.rs  fractal_heap.rs  free_space.rs  free_space_manager.rs  global_heap.rs  group_info.rs  group_v1.rs  group_v2.rs  lane_partition.rs  layout_info.rs  lib.rs  libver.rs  link_info.rs  (+25 more)
src/mat/: builder.rs  class.rs  complex.rs  dims.rs  error.rs  identifier.rs  matrix.rs  mod.rs  opaque.rs  options.rs  string_object.rs  table.rs  userblock.rs  utf16.rs  value.rs
src/mat/de/: mcos_reader.rs  mod.rs  reader.rs  value_de.rs
src/mat/ser/: emit.rs  emit_with_builder.rs  mod.rs  root.rs  transpose.rs  value_ser.rs
tests/: append.rs  append_crosscheck.rs  append_writer.rs  append_writer_crosscheck.rs  bounded_append.rs  bounded_append_crosscheck.rs  c_write_compat.rs  cell_array.rs  chunk_cache_stats.rs  chunked_edge_roundtrip.rs  csr_multi_dataset.rs  dataset_access_options.rs  dense_huge_objects.rs  edit_append_inplace.rs  edit_append_inplace_crosscheck.rs  edit_crosscheck.rs  edit_dataset_attr.rs  edit_dense_attr_copy.rs  edit_free_space.rs  edit_in_place.rs  edit_space_accounting.rs  edit_userblock.rs  edit_userblock_chunked.rs  edit_userblock_crosscheck.rs  edit_userblock_followups.rs  enum_datatype.rs  extensible_array_crosscheck.rs  file_inspect.rs  file_locking.rs  file_space_crosscheck.rs  file_space_fuzz_crosscheck.rs  file_space_strategy.rs  fill_value.rs  fill_value_crosscheck.rs  fractal_heap_dense_links.rs  generic_element.rs  hdf5_crosscheck.rs  layout_introspection.rs  layout_introspection_crosscheck.rs  mat_builder.rs  (+38 more)
tests/fixtures/: chunked_2d.h5  chunked_deflate.h5  chunked_fletcher32.h5  chunked_large.h5  chunked_shuffle_deflate.h5  dense_attrs.h5  dense_attrs_root.h5  minimal_v2.h5  mixed_attrs.h5  nested_groups.h5  two_groups.h5  v2_groups.h5  v2_many_links.h5  v4_2d.h5  v4_fixed_array.h5  v4_implicit.h5  v4_single_chunk.h5  v4_single_chunk_deflate.h5  vl_strings.h5
tests/fixtures/mat_real/: NOTICE.md  test_enum_v73.mat  test_maps_v73.mat  test_string_v73.mat  test_tables_v73.mat  test_time_v73.mat
tests/fixtures/mat_synth/: NOTICE.md  gen_struct_array.py  struct_array_v73.mat
tests/fixtures/zfp/: f32_1d_13_partial_rate16.h5  f32_1d_16_mixed_rate16.h5  f32_1d_16_ramp_rate16.h5  f32_1d_16_ramp_rate32.h5  f32_1d_16_ramp_rate8.h5  f32_1d_16_zeros_rate16.h5  f32_1d_32_ramp_rate16.h5  f32_1d_32_ramp_rate8.h5  f32_1d_4_varied_rate24.h5  f32_2d_4x4_ramp_rate16.h5  f32_2d_5x7_partial_rate16.h5  f32_2d_8x12_ramp_rate16.h5  f32_3d_4x4x4_ramp_rate16.h5  f32_3d_8x8x8_ramp_rate16.h5  f32_4d_4x4x4x4_ramp_rate16.h5  f64_1d_16_ramp_rate16.h5  f64_1d_16_ramp_rate64.h5  f64_1d_16_ramp_rate8.h5  f64_1d_32_ramp_rate16.h5  f64_1d_32_ramp_rate8.h5  f64_2d_4x4_ramp_rate16.h5  f64_2d_8x12_ramp_rate16.h5  f64_3d_4x4x4_ramp_rate16.h5  f64_3d_8x8x8_ramp_rate16.h5  f64_4d_4x4x4x4_ramp_rate16.h5  i32_1d_16_ramp_rate16.h5  i32_1d_16_ramp_rate32.h5  i32_2d_4x4_ramp_rate16.h5  i32_2d_8x12_ramp_rate16.h5  i32_3d_4x4x4_ramp_rate16.h5  i32_3d_8x8x8_ramp_rate16.h5  i32_4d_4x4x4x4_ramp_rate16.h5  i64_1d_16_ramp_rate16.h5  i64_1d_16_ramp_rate32.h5  i64_2d_4x4_ramp_rate16.h5  i64_2d_8x12_ramp_rate16.h5  i64_3d_4x4x4_ramp_rate16.h5  i64_3d_8x8x8_ramp_rate16.h5  manifest.json  (+3 more)
(+2 files in other folders)
