[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/stephenberry/hdf5-pure"

[workspace.lints.clippy]
# Low-level binary format code naturally has many fields per call site
# (file_data, dataspace, datatype, layout, cache, ...). Default 7 is too tight.
too_many_arguments = "allow"
# Incremental bytestream construction reads more naturally as
# `let mut buf = Vec::new(); buf.push(...);` than the equivalent `vec![...]`.
vec_init_then_push = "allow"
same_item_push = "allow"
# Index-based loops are sometimes the clearest way to express the access pattern.
needless_range_loop = "allow"
# We prefer the explicit forms.
collapsible_if = "allow"
collapsible_match = "allow"
collapsible_else_if = "allow"
manual_div_ceil = "allow"
manual_is_multiple_of = "allow"
unnecessary_map_or = "allow"
# Approximate float constants in tests/fixtures are intentional.
approx_constant = "allow"

[package]
name = "hdf5-pure"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-Rust HDF5 writer library (WASM-compatible, no C dependencies)"
repository.workspace = true
build = "build.rs"
# Keep binary test fixtures out of the published crate. They are needed only
# for maintainer CI (byte-level crosscheck against reference HDF5 / H5Z-ZFP
# fixtures) and stay in the git repo for that purpose.
exclude = ["tests/fixtures/**"]

[features]
default = ["std", "checksum", "deflate"]
std = [
    "hdf5-core/std",
    "hdf5-format/std",
    "hdf5-filters/std",
    "hdf5-engine/std",
    "dep:hdf5-api",
    "hdf5-api/std",
    "dep:hdf5-mat",
]
checksum = ["hdf5-core/checksum", "hdf5-format/checksum", "hdf5-engine/checksum"]
fast-checksum = ["hdf5-core/fast-checksum"]
deflate = ["hdf5-filters/deflate", "hdf5-engine/deflate"]
fast-deflate = ["hdf5-filters/fast-deflate", "hdf5-engine/fast-deflate"]
provenance = ["hdf5-engine/provenance"]
parallel = ["hdf5-engine/parallel"]
# Pure-Rust ZFP fixed-rate compression filter (HDF5 filter ID 32013).
# Supports f32/f64/i32/i64 datasets in 1D–4D.
zfp = ["hdf5-filters/zfp", "hdf5-engine/zfp"]
# Ergonomic N-dimensional array I/O via the `ndarray` crate
# (`DatasetBuilder::with_ndarray`, `Dataset::read_array`/`read_array_dyn`).
# Requires `std` (it builds on the File/Dataset reader and writer APIs).
ndarray = ["std", "hdf5-engine/ndarray", "hdf5-api/ndarray"]
# Serde-based (de)serialization of MATLAB v7.3 .mat files.
# Requires `std` (uses File/Group/Dataset reader APIs).
serde = ["std", "hdf5-mat/serde"]
# Test-only: enable a crosscheck test that links against the system libmatio
# (reference MATLAB MAT file library). Requires libmatio to be installed:
# `brew install libmatio` (macOS) or `apt install libmatio-dev` (Debian).
# Not a run-time dependency — build.rs only emits link directives for this
# feature, and the crosscheck lives in a gated integration test.
matio-crosscheck = ["serde"]

[dependencies]
hdf5-core = { path = "crates/hdf5-core", version = "=0.9.0", default-features = false }
hdf5-format = { path = "crates/hdf5-format", version = "=0.9.0", default-features = false }
hdf5-filters = { path = "crates/hdf5-filters", version = "=0.9.0", default-features = false }
hdf5-engine = { path = "crates/hdf5-engine", version = "=0.9.0", default-features = false }
hdf5-api = { path = "crates/hdf5-api", version = "=0.9.0", optional = true, default-features = false }
hdf5-mat = { path = "crates/hdf5-mat", version = "=0.9.0", optional = true, default-features = false }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# Used by the ndarray integration tests/examples. `ndarray` is otherwise a
# transitive dependency (pulled by `hdf5-api` under the `ndarray` feature), so
# it is declared here as well to be nameable from the facade's test crates.
ndarray = ">=0.16, <0.18"

# The reference HDF5 C library, used only by the byte-level crosscheck tests.
# Its `static` feature compiles libhdf5 from source via CMake, which does not
# cross-compile to 32-bit targets cleanly and is unnecessary there anyway (a
# 32-bit host cannot allocate the multi-GiB fixtures these tests build). Gate it
# to 64-bit-pointer targets so `cross test --target i686-...` can run the
# pure-Rust suite on a 32-bit pointer width without building any C code. The
# crosscheck test files (and the metno-backed unit tests in `swmr_writer`) carry
# the matching `#![cfg(not(target_pointer_width = "32"))]` gate.
[target.'cfg(not(target_pointer_width = "32"))'.dev-dependencies]
hdf5 = { package = "hdf5-metno", version = "0.12", features = ["static", "zlib"] }

[[example]]
name = "matlab_fixtures"
required-features = ["serde"]

# Style-preference clippy lints are defined once in `[workspace.lints]` and
# inherited by every member crate (including this facade) below.
[lints]
workspace = true
