[package]
name = "hdf5-pure"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "Pure-Rust HDF5 writer library (WASM-compatible, no C dependencies)"
repository = "https://github.com/stephenberry/hdf5-pure"
build = "build.rs"
# Keep binary test fixtures out of the published crate. They are needed only
# for maintainer CI (byte-level crosscheck against reference HDF5 / H5Z-ZFP
# fixtures) and stay in the git repo for that purpose.
exclude = ["tests/fixtures/**"]

[features]
default = ["std", "checksum", "deflate"]
std = []
checksum = []
fast-checksum = ["crc32fast"]
deflate = ["flate2"]
fast-deflate = ["flate2/zlib-ng"]
provenance = ["sha2"]
parallel = ["rayon"]
# Pure-Rust ZFP fixed-rate compression filter (HDF5 filter ID 32013).
# Supports f32/f64/i32/i64 datasets in 1D–4D.
zfp = []
# Ergonomic N-dimensional array I/O via the `ndarray` crate
# (`DatasetBuilder::with_ndarray`, `Dataset::read_array`/`read_array_dyn`).
# Requires `std` (it builds on the File/Dataset reader and writer APIs).
ndarray = ["dep:ndarray", "std"]
# Serde-based (de)serialization of MATLAB v7.3 .mat files.
# Requires `std` (uses File/Group/Dataset reader APIs).
serde = ["dep:serde", "std"]
# Test-only: enable a crosscheck test that links against the system libmatio
# (reference MATLAB MAT file library). Requires libmatio to be installed:
# `brew install libmatio` (macOS) or `apt install libmatio-dev` (Debian).
# Not a run-time dependency — build.rs only emits link directives for this
# feature, and the crosscheck lives in a gated integration test.
matio-crosscheck = ["serde"]

[dependencies]
byteorder = { version = "1", default-features = false }
flate2 = { version = "1", optional = true, default-features = false, features = ["rust_backend"] }
sha2 = { version = "0.10", optional = true, default-features = false }
rayon = { version = "1", optional = true }
crc32fast = { version = "1", optional = true }
serde = { version = "1", optional = true, default-features = false, features = ["derive", "alloc"] }
# A permissive range (like `hdf5-metno`'s own `ndarray` requirement) so the
# user's existing `ndarray` unifies with ours instead of compiling a second
# copy. Only APIs stable across 0.16/0.17 are used.
ndarray = { version = ">=0.16, <0.18", optional = true }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# The reference HDF5 C library, used only by the byte-level crosscheck tests.
# Its `static` feature compiles libhdf5 from source via CMake, which does not
# cross-compile to 32-bit targets cleanly and is unnecessary there anyway (a
# 32-bit host cannot allocate the multi-GiB fixtures these tests build). Gate it
# to 64-bit-pointer targets so `cross test --target i686-...` can run the
# pure-Rust suite on a 32-bit pointer width without building any C code. The
# crosscheck test files (and the metno-backed unit tests in `swmr_writer`) carry
# the matching `#![cfg(not(target_pointer_width = "32"))]` gate.
[target.'cfg(not(target_pointer_width = "32"))'.dev-dependencies]
hdf5 = { package = "hdf5-metno", version = "0.12", features = ["static", "zlib"] }

[[example]]
name = "matlab_fixtures"
required-features = ["serde"]

# Style-preference clippy lints muted crate-wide. The remaining clippy
# surface is still on (`-D warnings` in CI), so genuinely problematic
# patterns continue to fail the build.
[lints.clippy]
# Low-level binary format code naturally has many fields per call site
# (file_data, dataspace, datatype, layout, cache, ...). Default 7 is too tight.
too_many_arguments = "allow"
# Incremental bytestream construction reads more naturally as
# `let mut buf = Vec::new(); buf.push(...);` than the equivalent `vec![...]`.
vec_init_then_push = "allow"
same_item_push = "allow"
# Index-based loops are sometimes the clearest way to express the access pattern.
needless_range_loop = "allow"
# We prefer the explicit forms.
collapsible_if = "allow"
collapsible_match = "allow"
collapsible_else_if = "allow"
manual_div_ceil = "allow"
manual_is_multiple_of = "allow"
unnecessary_map_or = "allow"
# Approximate float constants in tests/fixtures are intentional.
approx_constant = "allow"
