[package]
name = "hdf5-pure-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
hdf5-pure = { path = ".." }
libfuzzer-sys = "0.4"
tempfile = "3"

[[bin]]
name = "parse_file"
path = "fuzz_targets/parse_file.rs"
test = false
doc = false

[[bin]]
name = "streaming_differential"
path = "fuzz_targets/streaming_differential.rs"
test = false
doc = false

[[bin]]
name = "roundtrip_simple"
path = "fuzz_targets/roundtrip_simple.rs"
test = false
doc = false
