[package]
name = "hdf5-engine"
description = "HDF5 data engine (chunked read/write, indexes, attributes, groups) for hdf5-pure. Internal crate; use `hdf5-pure` instead."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
std = ["hdf5-core/std", "hdf5-format/std", "hdf5-filters/std"]
checksum = ["hdf5-format/checksum"]
deflate = ["hdf5-filters/deflate"]
fast-deflate = ["hdf5-filters/fast-deflate"]
zfp = ["hdf5-filters/zfp"]
parallel = ["dep:rayon"]
provenance = ["dep:sha2"]
ndarray = ["dep:ndarray", "std"]

[dependencies]
hdf5-core = { path = "../hdf5-core", version = "=0.9.0" }
hdf5-format = { path = "../hdf5-format", version = "=0.9.0" }
hdf5-filters = { path = "../hdf5-filters", version = "=0.9.0" }
rayon = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true, default-features = false }
ndarray = { version = ">=0.16, <0.18", optional = true }

[lints]
workspace = true
