[package]
name = "hdf5-engine"
description = "HDF5 data engine (chunked read/write, indexes, attributes, groups) for hdf5-pure. Internal crate; use `hdf5-pure` instead."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# See hdf5-core: `default` is for standalone `cargo test`; the facade overrides
# it with `default-features = false`.
default = ["std", "checksum", "deflate"]
std = ["hdf5-core/std", "hdf5-format/std", "hdf5-filters/std"]
checksum = ["hdf5-format/checksum"]
deflate = ["hdf5-filters/deflate"]
fast-deflate = ["hdf5-filters/fast-deflate"]
zfp = ["hdf5-filters/zfp"]
parallel = ["dep:rayon"]
provenance = ["dep:sha2"]
ndarray = ["dep:ndarray", "std"]

[dependencies]
hdf5-core = { path = "../hdf5-core", version = "=0.9.0", default-features = false }
hdf5-format = { path = "../hdf5-format", version = "=0.9.0", default-features = false }
hdf5-filters = { path = "../hdf5-filters", version = "=0.9.0", default-features = false }
rayon = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true, default-features = false }
ndarray = { version = ">=0.16, <0.18", optional = true }

[dev-dependencies]
# Used by the Extensible Array geometry unit tests in `chunked_write`.
serde_json = "1"
# Doc examples in this crate are written from the end user's perspective
# (`use hdf5_pure::...`). Declared path-only (no version) so cargo strips it on
# publish, keeping the bottom-up publish order intact; it only exists to make
# `cargo test -p hdf5-engine`'s doctests resolve the facade locally.
hdf5-pure = { path = "../.." }

[lints]
workspace = true
