[package]
name = "hdf5-format"
description = "HDF5 on-disk format structures (object headers, B-trees, heaps, datatypes) for hdf5-pure. Internal crate; use `hdf5-pure` instead."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# See hdf5-core: `default` is for standalone `cargo test`; the facade overrides
# it with `default-features = false`.
default = ["std", "checksum"]
std = ["hdf5-core/std"]
checksum = ["hdf5-core/checksum"]

[dependencies]
hdf5-core = { path = "../hdf5-core", version = "=0.9.0", default-features = false }
byteorder = { version = "1", default-features = false }

[lints]
workspace = true
