[package]
name = "hdf5-pure-core"
description = "Core primitives (errors, conversions, checksums, byte sources) for hdf5-pure. Internal crate; use `hdf5-pure` instead."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# `default` exists so `cargo test -p hdf5-pure-core` builds with std (the test
# harness needs it). The facade sets `default-features = false` and drives
# features explicitly, so this does not leak into `hdf5-pure`'s no_std builds.
default = ["std", "checksum"]
std = []
checksum = []
fast-checksum = ["dep:crc32fast"]

[dependencies]
crc32fast = { version = "1", optional = true }

[lints]
workspace = true
