[package]
name = "hdf5-pure-engine"
description = "HDF5 data engine (chunked read/write, indexes, attributes, groups) for hdf5-pure. Internal crate; use `hdf5-pure` instead."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# See hdf5-pure-core: `default` is for standalone `cargo test`; the facade overrides
# it with `default-features = false`.
default = ["std", "checksum", "deflate"]
std = ["hdf5-pure-core/std", "hdf5-pure-format/std", "hdf5-pure-filters/std"]
checksum = ["hdf5-pure-format/checksum"]
deflate = ["hdf5-pure-filters/deflate"]
fast-deflate = ["hdf5-pure-filters/fast-deflate"]
zfp = ["hdf5-pure-filters/zfp"]
parallel = ["dep:rayon"]
provenance = ["dep:sha2"]
ndarray = ["dep:ndarray", "std"]

[dependencies]
hdf5-pure-core = { path = "../hdf5-pure-core", version = "=0.9.0", default-features = false }
hdf5-pure-format = { path = "../hdf5-pure-format", version = "=0.9.0", default-features = false }
hdf5-pure-filters = { path = "../hdf5-pure-filters", version = "=0.9.0", default-features = false }
rayon = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true, default-features = false }
ndarray = { version = ">=0.16, <0.18", optional = true }

[dev-dependencies]
# Used by the Extensible Array geometry unit tests in `chunked_write`.
serde_json = "1"
# Doc examples in this crate are written from the end user's perspective
# (`use hdf5_pure::...`). Declared path-only (no version) so cargo strips it on
# publish, keeping the bottom-up publish order intact; it only exists to make
# `cargo test -p hdf5-pure-engine`'s doctests resolve the facade locally.
hdf5-pure = { path = "../.." }

[lints]
workspace = true
