[package]
name = "hdf5-pure-format"
description = "HDF5 on-disk format structures (object headers, B-trees, heaps, datatypes) for hdf5-pure. Internal crate; use `hdf5-pure` instead."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# See hdf5-pure-core: `default` is for standalone `cargo test`; the facade overrides
# it with `default-features = false`.
default = ["std", "checksum"]
std = ["hdf5-pure-core/std"]
checksum = ["hdf5-pure-core/checksum"]

[dependencies]
hdf5-pure-core = { workspace = true }
byteorder = { version = "1", default-features = false }

[lints]
workspace = true
